a003 - 07/12/2020 - ADDED FULL FUNCTION
- Extra player mats, removed unused functions

a002 - 06/12/2020 - START OF CHANGELOG ALPHAV002
- Discord bot up and running, can still use major improvements