@@ -16,52 +16,48 @@ bot = commands.Bot(command_prefix='!', intents=intents)
 @bot.event
 async def on_ready():
   print('Logged in as ScytheBot')
-  print('ScytheBot alpha004')
+  print('ScytheBot alpha005')
   print('----------')
 
-fact_ori = ['Rusviet', 'Crimean', 'Polania', 'Nordic', 'Saxony']
-fact_add = ['Albion', 'Togawa']
-fact_full = fact_ori + fact_add
-mats_ori = ['Industrial', 'Engineering', 'Patriotic', 'Mechanical', 'Agricultural']
-mats_add = ['Militant', 'Innovative']
-mats_full = mats_ori + mats_add
+# Initialize factions, mats, and rank lists ordered according to factions list
+dfact = {'original': ['Rusviet', 'Crimean', 'Polania', 'Nordic', 'Saxony'], 'add-on': ['Albion', 'Togawa']}
+dfact_full = sum(dfact.values(), [])
+dmats = {'original': ['Industrial', 'Engineering', 'Patriotic', 'Mechanical', 'Agricultural'], 'add-on': ['Militant', 'Innovative']}
+dmats_full = sum(dmats.values(), [])
 rank_names = ['F', 'D', 'C', 'B', 'A', 'S', 'SS', 'BANNED']
-rank_industrial = [8,6,5,5,5,1,2]
-rank_engineering = [6,5,3,4,2,2,2]
-rank_patriotic = [5,8,4,4,4,3,3]
-rank_mechanical = [6,6,4,3,4,1,1]
-rank_agricultural = [5,4,4,3,2,2,3]
-rank_militant = [7,7,5,3,4,4,3]
-rank_innovative = [7,7,6,5,6,4,4]
-vpenalty = {}
-joinlist = {}
+drank = {'Industrial'  : [8,6,5,5,5,1,2],\
+	 'Engineering' : [6,5,3,4,2,2,2],\
+	 'Patriotic'   : [5,8,4,4,4,3,3],\
+	 'Mechanical'  : [6,6,4,3,4,1,1],\
+	 'Agricultural': [5,4,4,3,2,2,3],\
+	 'Militant'    : [7,7,5,3,4,4,3],\
+	 'Innovative'  : [7,7,6,5,6,4,4]}
 
-async def generate(g_players, g_penalty: int, g_full: int, banned_rank: int):
+#default penalty and ban levels
+dpen = 7
+dban = 8
+dfull = 0
+vfact, vmat, vpen, vban, vfull, vjoin = {}, {}, {}, {}, {}, {}
+
+async def generate(g_players, g_penalty: int, banned_rank: int, g_full: int):
   if (g_full == 1):
-    factions = fact_full
-    mats = mats_full
-    if (len(g_players) > 7):
-        g_players = g_players[0:7]
+    factions = dfact_full
+    mats = dmats_full
   elif (g_full == 2):
-    factions = fact_add
-    mats = mats_add
-    if (len(g_players) > 2):
-        g_players = g_players[0:2]
+    factions = dfact['add-on']
+    mats = dmats['add-on']
   else:
-    factions = fact_ori
-    mats = mats_ori
-    if (len(g_players) > 5):
-        g_players = g_players[0:5]
+    factions = dfact['original']
+    mats = dmats['original']
+  if (len(g_players) > len(factions)):
+    g_players = g_players[0:len(factions)]
   random.shuffle(g_players)
   random.shuffle(factions)
   random.shuffle(mats)
-  rank_index = []
-  rank = []
-  penalty_list = []
+  rank_index, rank, penalty_list = [], [], []
   message = {}
   for i in range(len(g_players)):
-    rank_list =  await det_ranklist(mats[i])
-    rank_index.append(rank_list[fact_full.index(factions[i])])
+    rank_index.append(drank[mats[i]][dfact_full.index(factions[i])])
     rank.append(rank_names[rank_index[i]-1])
     penalty_list.append(g_penalty * rank_index[i])
   penalty_offset = [pen - min(penalty_list) for pen in penalty_list]
@@ -72,78 +68,68 @@ async def generate(g_players, g_penalty: int, g_full: int, banned_rank: int):
     message[i] = ('{}: {} {}; rank {} ({}); penalty {} points'.format(g_players[i], factions[i], mats[i], rank[i], rank_index[i], penalty_offset[i]))
   return message
 
-async def det_ranklist(mat):
-  if (mat == 'Industrial'):
-    return rank_industrial
-  elif (mat == 'Engineering'):
-    return rank_engineering
-  elif (mat == 'Patriotic'):
-    return rank_patriotic
-  elif (mat == 'Mechanical'):
-    return rank_mechanical
-  elif (mat == 'Agricultural'):
-    return rank_agricultural
-  elif (mat == 'Militant'):
-    return rank_militant
-  elif (mat == 'Innovative'):
-    return rank_innovative
-
 @bot.command (name='join', help='Join the player list for the next game round. As is to add own name or pass (multiple) arguments for each player name.')
 async def join(ctx, *args):
-  global joinlist
-  if (ctx.guild.id not in joinlist):
-      joinlist[ctx.guild.id] = []
+  global vjoin
+  if (ctx.guild.id not in vjoin):
+      vjoin[ctx.guild.id] = []
   if not args:
-    joinlist[ctx.guild.id].append(ctx.author.name)
+    vjoin[ctx.guild.id].append(ctx.author.name)
   elif (args[0] == '$c'):
     voice_channel = discord.utils.get(ctx.guild.voice_channels, name="General")
     members = [user.name for user in voice_channel.members]
-    joinlist[ctx.guild.id].extend(members)
+    vjoin[ctx.guild.id].extend(members)
   else:
     for name in args:
-     joinlist[ctx.guild.id].append(name)
-  await ctx.send(joinlist[ctx.guild.id])
+     vjoin[ctx.guild.id].append(name)
+  await ctx.send(vjoin[ctx.guild.id])
   return
 
 @bot.command (name='list', help = 'Show current list of players joined.')
 async def list(ctx):
-  await ctx.send(joinlist[ctx.guild.id])
+  await ctx.send(vjoin[ctx.guild.id])
   return
 
-@bot.command (name='start', help='Start generating based on the list of joined players from the join command')
+@bot.command (name='start', help='Start generating based on the list of joined players')
 async def start(ctx):
-  global joinlist
-  if (ctx.guild.id in vpenalty):
-    g_penalty = vpenalty[ctx.guild.id]
-  else:
-    g_penalty = 7
-  if (ctx.guild.id) not in joinlist:
+  l_pen = vpen[ctx.guild.id] if ctx.guild.id in vpen else dpen
+  l_ban = vban[ctx.guild.id] if ctx.guild.id in vban else dban
+  l_full = vfull[ctx.guild.id] if ctx.guild.id in vfull else dfull
+  if (ctx.guild.id) not in vjoin:
     await ctx.send('No names provided; use join first.')
     return
-  response = await generate(joinlist[ctx.guild.id], g_penalty, 0, 8)
-  joinlist[ctx.guild.id] = []
+  response = await generate(vjoin[ctx.guild.id], l_pen, l_ban, l_full)
+  vjoin[ctx.guild.id] = []
   for set in response:
     await ctx.send(response[set])
   return
 
-@bot.command (name='js', help='Joins+Start [list of names]. Generate random faction/mat combo\'s based on base game only.')
+@bot.command (name='js', help='Join+Start [optional options] [list of names]')
 async def js(ctx, *args):
   userlist = []
-  if (ctx.guild.id in vpenalty):
-    g_penalty = vpenalty[ctx.guild.id]
-  else:
-    g_penalty = 7
+  l_pen = vpen[ctx.guild.id] if ctx.guild.id in vpen else dpen
+  l_ban = vban[ctx.guild.id] if ctx.guild.id in vban else dban
+  l_full = vfull[ctx.guild.id] if ctx.guild.id in vfull else dfull
   if not args:
     userlist = [user.name for user in discord.utils.get(ctx.guild.voice_channels, name="General").members]
     if (len(userlist) >= 1):
-      response = await generate(userlist, g_penalty, 0, 8)
+      response = await generate(userlist, l_pen, l_ban, l_full)
     else:
       await ctx.send('No players found in voice chat General')
       return
   else:
-    for arg in args:
+    argstart = 0
+    if args[0][0] == '$':
+      l_pen = int(args[0][1])
+      l_ban = int(args[0][2])
+      l_full = int(args[0][3])
+      await ctx.send(l_pen)
+      await ctx.send(l_ban)
+      await ctx.send(l_full)
+      argstart = 1
+    for arg in args[argstart:]:
       userlist.append(arg)
-    response = await generate(userlist, g_penalty, 0, 8)
+    response = await generate(userlist, l_pen, l_ban, l_full)
   message = ''
   for set in response:
     message += '\n' + response[set]
@@ -153,21 +139,19 @@ async def js(ctx, *args):
 @bot.command (name='jsf', help='Join+Start+Full [list of names]. Generate random faction/mat combo\'s based on base game and expansion')
 async def jsf(ctx, *args):
   userlist = []
-  if (ctx.guild.id in vpenalty):
-    g_penalty = vpenalty[ctx.guild.id]
-  else:
-    g_penalty = 7
+  l_pen = vpen[ctx.guild.id] if ctx.guild.id in vpen else dpen
+  l_ban = vban[ctx.guild.id] if ctx.guild.id in vban else dban
   if not args:
     userlist = [user.name for user in discord.utils.get(ctx.guild.voice_channels, name="General").members]
     if (len(userlist) >= 1):
-      response = await generate(userlist, g_penalty, 1, 8)
+      response = await generate(userlist, l_pen, l_ban, 1)
     else:
       await ctx.send('No players found in voice chat General')
       return
   else:
     for arg in args:
       userlist.append(arg)
-    response = await generate(userlist, g_penalty, 1, 8)
+    response = await generate(userlist, l_pen, l_ban, 1)
   message = ''
   for set in response:
     message += '\n' + response[set]
@@ -177,31 +161,42 @@ async def jsf(ctx, *args):
 @bot.command (name='jsa', help='Join+Start+Add-on Only [list of names]. Generate random faction/mat combo\'s based on base game and expansion')
 async def jsa(ctx, *args):
   userlist = []
-  if (ctx.guild.id in vpenalty):
-    g_penalty = vpenalty[ctx.guild.id]
-  else:
-    g_penalty = 7
+  l_pen = vpen[ctx.guild.id] if ctx.guild.id in vpen else dpen
+  l_ban = vban[ctx.guild.id] if ctx.guild.id in vban else dban
   if not args:
     userlist = [user.name for user in discord.utils.get(ctx.guild.voice_channels, name="General").members]
     if (len(userlist) >= 1):
-      response = await generate(userlist, g_penalty, 2, 8)
+      response = await generate(userlist, l_pen, l_ban, 2)
     else:
       await ctx.send('No players found in voice chat General')
       return
   else:
     for arg in args:
       userlist.append(arg)
-    response = await generate(userlist, g_penalty, 2, 8)
+    response = await generate(userlist, l_pen, l_ban, 2)
     message = ''
     for set in response:
       message += '\n' + response[set]
     await ctx.send(message.strip('\n'))
   return
 
-@bot.command (name='', help='Set the penalty multiplier.')
-async def setpenalty(ctx, set_penalty: int):
-  vpenalty[ctx.guild.id] = set_penalty
+@bot.command (name='pen', help='Set the penalty multiplier.')
+async def pen(ctx, set_penalty: int):
+  vpen[ctx.guild.id] = set_penalty
   await ctx.send('Penalty multiplier set to {}'.format(set_penalty))
+  return
+
+@bot.command (name='ban', help='Set the banned level')
+async def ban(ctx, set_ban: int):
+  vban[ctx.guild.id] = set_ban
+  await ctx.send('Ban level set to {}'.format(set_ban))
+  return
+
+@bot.command (name='full', help='Set which factions/mats to use: 0=original, 1=full, 2=addon only')
+async def full(ctx, set_full: int):
+  vfull[ctx.guild.id] = set_full
+  await ctx.send('Faction/mat selection set to {}'.format(set_full))
+  return
 
 @bot.command(name='roll_dice', help='Simulates rolling dice. Example: "roll_dice 3 6" will roll 3 dice of 6 sides.')
 async def roll(ctx, number_of_dice: int, number_of_sides: int):
@@ -210,5 +205,13 @@ async def roll(ctx, number_of_dice: int, number_of_sides: int):
         for _ in range(number_of_dice)
     ]
     await ctx.send(', '.join(dice))
+
+@bot.command(name='reset', help='Resets servers specific saved parameters')
+async def reset(ctx):
+  del vpen[ctx.guild.id]
+  del vban[ctx.guild.id]
+  del vfull[ctx.guild.id]
+  del vjoin[ctx.guild.id]
+  return
 
 bot.run(TOKEN)
