@@ -1,3 +1,6 @@
+a005 - 2020/12/12 - ADDED SERVER SPECIFIC SETTINGS
+- Known issues: reroll upon banned combination
+
 a003 - 07/12/2020 - ADDED FULL FUNCTION
 - Extra player mats, removed unused functions
 
